tests/baselines/reference/paramterDestrcuturingDeclaration.errors.txt
tests/cases/compiler/paramterDestrcuturingDeclaration.ts(2,10): error TS2842: Variable 'name' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/paramterDestrcuturingDeclaration.ts(3,14): error TS2842: Variable 'boolean' is not used. Did you mean to write a type annotation for whole object?


==== tests/cases/compiler/paramterDestrcuturingDeclaration.ts (2 errors) ====
    interface C {
        ({p: name}): any;
             ~~~~
!!! error TS2842: Variable 'name' is not used. Did you mean to write a type annotation for whole object?
        new ({p: boolean}): any;
                 ~~~~~~~
!!! error TS2842: Variable 'boolean' is not used. Did you mean to write a type annotation for whole object?
    }
    